# learner

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  TODO.md  app.py  docker-compose.yaml  main.py  pyproject.toml  test_venv.py
.github/workflows/: ci.yml
.opencode/commands/: new.md
.opencode/skills/hexagonal-python/: SKILL.md
domain/entities/: file.py  message.py  session.py  user.py
domain/repositories/: file_repository.py  message_repository.py  session_repository.py  user_repository.py
infra/: database.py
infra/adapters/: bcrypt_password_hasher.py  cross_encoder_reranker.py  langchain_splitter.py  openai_model.py  pdf_extractor.py  postgres_adapter.py  pyjwt_token_provider.py  txt_extractor.py
infra/adapters/repository/postgres/: file_repository.py  message_repository.py  session_repository.py  user_repository.py
infra/adapters/tools/: ingest_document.py
infra/llm/adapters/: langchain_splitter.py  openai_model.py
infra/llm/ports/: model.py
infra/ports/: database.py  extractor.py  model.py  password_hasher.py  reranker.py  splitter.py  token_provider.py
routes/: dependencies.py  router.py  web.py
routes/v1/: ask.py  authentication.py  session.py  upload.py
schemas/: ask.py  authentication.py  session.py  upload.py
service/: ask.py  formatter.py  knowledge.py
services/: ask.py  authentication.py  extractor.py  file.py  formatter.py  knowledge.py  session.py
web/: index.html
