[project]
name = "learner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb",
    "python-dotenv",
    "openai",
    "langchain-text-splitters",
    "fastapi",
    "uvicorn[standard]",
    "pypdf",
    "python-multipart",
    "tiktoken",
    "sentence-transformers",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.setuptools.packages.find]
include = ["*"]
